--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.6.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
@@ -20,6 +21,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.21.21",
+    "multer": "^1.4.3",
     "sqlite3": "^5.0.2"
   }
 }
